# src/routes/emailverify.routes.js
@@ -1,0 +1,8 @@
+import { Router } from 'express';
+import { verifyEmailController } from '../controllers/email.controller.js';
+
+const router = Router();
+
+router.post('/verify', verifyEmailController);
+
+export default router;
